# limnc-flake

./: 404.html  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: python-package.yml
docs/: guide.md  index.md
flake/: app.py
flake/services/: config.py  instrument.py  job.py  scheduler.py
flake/views/: config.py  instrument.py  job.py  scheduler.py  ui.py
guide/: index.html
search/: search_index.json
tests/: test_config.py  test_dummy.py
tests/data/: config.yml
