[tool.poetry]
name = "flake"
version = "0.1.0"
description = "LéXPLORE datalakes tagging"
authors = ["ymarcon <yannick.marcon@epfl.ch>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.scripts]
flake = 'flake.app:main'

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.2"
typer = "^0.15.1"
ttkbootstrap = "^1.10.1"
requests = "^2.32.3"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
