[tool.poetry]
name = "flake"
version = "0.10.0"
description = "LéXPLORE datalakes (cli)"
authors = ["ymarcon <yannick.marcon@epfl.ch>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.scripts]
flake = 'flake.app:main'

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.2"
typer = "^0.15.1"
ttkbootstrap = "^1.10.1"
requests = "^2.32.3"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
